[package]
name = "git-cm"
description = "A git command that generates conventional-friendly commit messages."
repository = "https://github.com/mainrs/git-cm"
documentation = "https://docs.rs/git-cm"
readme = "README.md"
keywords = ["commit", "commitizen", "git"]
categories = ["command-line-utilities", "development-tools"]
version = "0.2.3"
license = "MIT OR Apache-2.0"
authors = ["mainrs"]
edition = "2018"

[package.metadata.commits]
defaults = true

[dependencies]
anyhow = "1.0.40"
cargo_toml = "0.19.2"
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
ctrlc = { version = "3.1.9", features = ["termination"] }
dialoguer = "0.11.0"
edit = "0.1.3"
git2 = { version = "0.18.3", default-features = false }
indexmap = "2.7.0"
inquire = { version = "0.7.5", default-features = false, features = ["console", "macros"] }
once_cell = "1.7.2"
serde = { version = "1.0.126", features = ["derive"] }

[patch.crates-io]
dialoguer = { path = "patches/dialoguer-0.11.0" }

# inquire 0.7.5之后修复了中文输入光标显示位置不正确的bug, 新版本发布后取消补丁
# [When I input Chinese characters in the command line, the cursor becomes chaotic. · Issue #270 · mikaelmello/inquire]
# (https://github.com/mikaelmello/inquire/issues/270)
inquire = { git = "https://github.com/mikaelmello/inquire", rev = "446ce3d134a7e5e6158ecbd4ceb24e3c13abde61" }
